--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "senman/PHPExcel",
+  "name": "senman/phpexcel",
   "description": "基于PHPexcel封装的excel组件",
   "license": "MIT",
   "keywords": [
@@ -15,7 +15,7 @@
     }
   ],
   "support": {
-    "issues": "https://github.com/senmangit/PHPExcel"
+    "issues": "https://github.com/senmangit/phpexcel"
   },
   "minimum-stability": "dev",
   "require": {
