--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   },
   "minimum-stability": "dev",
   "require": {
-    "php": "^5.2|^7.0",
+    "php": ">=5.6",
     "ext-mbstring": "*",
     "ext-xml": "*",
     "ext-xmlwriter": "*",
