--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "senman/phpexcel",
-  "description": "基于PHPexcel封装的excel组件",
+  "description": "基于phpspreadsheet封装的excel组件",
   "license": "MIT",
   "keywords": [
     "excel",
