--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "senman/phpoffice",
-  "description": "简单易用的phpoffice套件，可实现导入/导出excel、将word转为PDF,将pdf转为图片等等功能",
+  "description": "简单易用的phpoffice套件，可实现导入/导出excel、将word转为PDF,将pdf转为图片等等功能。"
   "license": "MIT",
   "keywords": [
     "excel",
